use some() instead of find() for file matching, change test file name

--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "serve": "npm run symlink-package && parcel serve --no-hmr --out-file dist/extension.js src/extension.ts",
     "watch:typecheck": "tsc -p tsconfig.json -w",
     "watch:build": "tsc -p tsconfig.dist.json -w",
-    "sourcegraph:prepublish": "npm run build"
+    "sourcegraph:prepublish": "npm run typecheck && npm run test && npm run build"
   },
   "browserslist": [
     "last 1 Chrome versions",
