--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
   "main": "dist/extension.js",
   "scripts": {
     "tslint": "tslint -p tsconfig.json './src/**/*.ts'",
+    "prettier": "prettier --list-different --write \"src/**/*.ts\"",
     "typecheck": "tsc -p tsconfig.json",
     "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha --require ts-node/register --require source-map-support/register --opts mocha.opts",
     "cover": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' nyc --require ts-node/register --require source-map-support/register --all mocha --opts mocha.opts --timeout 10000",
@@ -110,6 +111,7 @@
     "mocha": "^6.0.2",
     "nyc": "^13.3.0",
     "parcel-bundler": "^1.12.0",
+    "prettier": "1.16.4",
     "rxjs": "^6.4.0",
     "source-map-support": "^0.5.11",
     "sourcegraph": "^23.0.0",
