--- a/package.json
+++ b/package.json
@@ -82,8 +82,6 @@
   "main": "dist/extension.js",
   "scripts": {
     "tslint": "tslint -p tsconfig.json './src/**/*.ts'",
-    "prettier-check": "npm run prettier -- --write=false",
-    "prettier": "prettier --list-different --write \"src/**/*.ts\"",
     "typecheck": "tsc -p tsconfig.json",
     "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha --require ts-node/register --require source-map-support/register --opts mocha.opts",
     "cover": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' nyc --require ts-node/register --require source-map-support/register --all mocha --opts mocha.opts --timeout 10000",
@@ -103,7 +101,7 @@
     ]
   },
   "mocha": {
-    "spec": "src/test/**/*.test.ts"
+    "spec": "src/**/*.test.ts"
   },
   "nyc": {
     "include": [
@@ -130,19 +128,27 @@
     "last 1 Safari versions"
   ],
   "devDependencies": {
+    "@commitlint/cli": "^7.2.1",
+    "@commitlint/config-conventional": "^7.1.2",
     "@sourcegraph/prettierrc": "^2.2.0",
     "@sourcegraph/tsconfig": "^4.0.0",
     "@sourcegraph/tslint-config": "^13.0.0",
     "@types/expect": "^1.20.4",
+    "@types/lodash": "4.14.123",
     "@types/mocha": "^5.2.6",
+    "@types/mock-require": "2.0.0",
+    "@types/sinon": "7.0.11",
     "expect": "^24.7.1",
     "lnfs-cli": "^2.1.0",
+    "lodash": "^4.17.11",
     "mkdirp": "^0.5.1",
     "mocha": "^6.1.2",
+    "mock-require": "^3.0.3",
     "nyc": "^13.3.0",
     "parcel-bundler": "^1.12.3",
     "prettier": "1.16.4",
     "rxjs": "^6.4.0",
+    "sinon": "^7.3.1",
     "source-map-support": "^0.5.12",
     "sourcegraph": "^23.0.0",
     "ts-node": "^8.0.3",
