--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "extends": "./node_modules/@sourcegraph/tsconfig/tsconfig.json",
   "compilerOptions": {
-    "target": "es2016",
+    "target": "es2018",
     "module": "esnext",
     "moduleResolution": "node",
-    "sourceMap": true,
-    "declaration": true,
+    "lib": ["es2018", "webworker"],
+    "inlineSources": true,
+    "inlineSourceMap": true,
+    "declaration": false,
     "outDir": "dist",
+    "noEmit": true,
     "rootDir": "src",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
