remove configs form renovate

--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,3 @@
 {
-  "extends": ["github>sourcegraph/renovate-config"],
-  "travis": {
-    "enabled": true
-  },
-  "node": {
-    "supportPolicy": ["lts"]
-  }
+  "extends": ["github>sourcegraph/renovate-config"]
 }
