--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "noEmit": true,
     "rootDir": "src",
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
   }
 }
