--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "rootDir": "src",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
+    "sourceMap": true
   }
 }
