switch back to inlineSourceMap

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,12 @@
     "moduleResolution": "node",
     "lib": ["es2018", "webworker"],
     "inlineSources": true,
+    "inlineSourceMap": true,
     "declaration": false,
     "outDir": "dist",
     "noEmit": true,
     "rootDir": "src",
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "sourceMap": true
+    "allowSyntheticDefaultImports": true
   }
 }
