refactor based on code review

--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "last 1 Safari versions"
   ],
   "devDependencies": {
+    "@sourcegraph/extension-api-stubs": "^0.2.0",
     "@sourcegraph/prettierrc": "^2.2.0",
     "@sourcegraph/tsconfig": "^4.0.0",
     "@sourcegraph/tslint-config": "^13.1.0",
@@ -199,8 +200,5 @@
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5"
-  },
-  "dependencies": {
-    "@sourcegraph/extension-api-stubs": "^0.2.0"
   }
 }
