--- a/package.json
+++ b/package.json
@@ -32,10 +32,9 @@
         "title": "${config.sentry.decorations.inline && \"Hide\" || \"Show\"} inline Sentry links on file",
         "category": "Sentry",
         "actionItem": {
-          "label": "Sentry",
           "description": "${config.sentry.decorations.inline && \"Hide\" || \"Show\"} inline Sentry links",
           "iconDescription": "${config.sentry.decorations.inline && \"Hide\" || \"Show\"} inline Sentry links on file",
-          "iconURL": "https://github.com/sourcegraph/sourcegraph-sentry/assets/img/sentry-glyph-${config.sentry.decorations.inline && \"red\" || \"grey\".svg"
+          "iconURL": "https://github.com/sourcegraph/sourcegraph-sentry/blob/vo/add-sentry-icon/assets/img/sentry-glyph-grey.png"
         }
       }
     ],
