--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://raw.githubusercontent.com/sourcegraph/sourcegraph/master/shared/src/schema/extension.schema.json",
   "name": "sentry",
-  "description": "Sourcegraph Sentry extension renders \"View logs on Sentry\" links next to error handling code.",
+  "description": "Sourcegraph Sentry extension renders \"View issues on Sentry\" links next to error handling code.",
   "publisher": "Sourcegraph",
   "activationEvents": [
     "*"
